--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,11 @@
 language: nix
+
 nix: 2.2.2
-script: nix-build --argstr public-url '/werbematerial'
 
-cache:
-  directories:
-    - $HOME/nix.store
-
-before_install:
-- sudo mkdir -p /etc/nix
-- echo "substituters = https://cache.nixos.org/ file://$HOME/nix.store" | sudo tee -a /etc/nix/nix.conf > /dev/null
-- echo 'require-sigs = false' | sudo tee -a /etc/nix/nix.conf > /dev/null
-
-before_cache:
-- mkdir -p $HOME/nix.store
-- nix copy --to file://$HOME/nix.store -f default.nix buildInputs
+script:
+  - nix-env -iA cachix -f https://cachix.org/api/v1/install
+  - cachix use j-keck
+  - nix-build --argstr public-url '/werbematerial'
 
 deploy:
   provider: pages
