--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,9 @@ nix: 2.2.2
 script:
   - nix-env -iA cachix -f https://cachix.org/api/v1/install
   - cachix use werbematerial-gh-pages
+  - if [ -n "$CACHIX_SIGNING_KEY" ]; then cachix push werbematerial-gh-pages --watch-store; fi &
   - nix-build --argstr public-url '/werbematerial'
-
-cache:
-  directories:
-    - /nix/store
+  - sleep 10 # give cachix time to upload artifacts
 
 deploy:
   provider: pages
