--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,4 +1,5 @@
-name: GiHub Pages
+---
+name: GitHub Pages
 on:
   push:
     branches: [master]
@@ -7,11 +8,11 @@ jobs:
   gh-pages:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: cachix/install-nix-action@v13
+      - uses: actions/checkout@v3
+      - uses: cachix/install-nix-action@v20
         with:
-          nix_path: nixpkgs=channel:nixos-21.05
-      - uses: cachix/cachix-action@v10
+          nix_path: nixpkgs=channel:nixos-22.11
+      - uses: cachix/cachix-action@v12
         with:
           name: s77-werbematerial
           signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
